--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>kg.apc</groupId>
     <artifactId>jmeter-plugins-webdriver</artifactId>
-    <version>3.1</version>
+    <version>3.4</version>
 
     <name>WebDriver/Selenium</name>
     <description>WebDriver/Selenium</description>
@@ -17,9 +17,9 @@
     </licenses>
     <url>http://jmeter-plugins.org/</url>
     <scm>
-        <url>https://github.com/undera/jmeter-plugins</url>
-        <connection>https://github.com/undera/jmeter-plugins.git</connection>
-        <developerConnection>git@github.com:undera/jmeter-plugins.git</developerConnection>
+        <url>https://github.com/undera/jmeter-plugins-webdriver</url>
+        <connection>https://github.com/undera/jmeter-plugins-webdriver.git</connection>
+        <developerConnection>git@github.com:undera/jmeter-plugins-webdriver.git</developerConnection>
     </scm>
     <developers>
         <developer>
