--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 sudo: false  # to use new infrastructure
 language: java
+addons:
+    firefox: "106.0.2"
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.32.0/geckodriver-v0.32.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.32.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
 install: "mvn -Dmaven.test.skip=true clean install --batch-mode"
 script: "mvn -Djava.awt.headless=true -Dmaven.test.redirectTestOutputToFile=true --fail-at-end --batch-mode org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report"
 after_success:
