--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.14</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.2</version>
+        </dependency>
         <!--
         <dependency>
 	       <groupId>org.w3c.css</groupId>
