--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,14 +16,17 @@ jobs:
     steps:
     - uses: browser-actions/setup-geckodriver@latest
     - uses: browser-actions/setup-firefox@v1
-#    - run: geckodriver --version
+
+    - run: geckodriver --version
+    - run: firefox --version
+
+    - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: '8'
         cache: maven
 
-    - uses: actions/checkout@v3
     - name: Maven tests
       run: mvn -T 1C -Djava.awt.headless=true -Dmaven.test.redirectTestOutputToFile=true --fail-at-end --batch-mode org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report install
 
